crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/007.cypher
MATCH (n) /* comment */ RETURN n; DROP ALL
